--- a/README.Rmd
+++ b/README.Rmd
@@ -10,22 +10,22 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "figures/"
 )
-library(ProjectApriori)
+library(Rpriori)
 ```
-[![Build Status](https://travis-ci.org/TimToebrock/Project_Apriori.svg?branch=master)](https://travis-ci.org/TimToebrock/Project_Apriori)
+[![Build Status](https://travis-ci.org/TimToebrock/Rpriori.svg?branch=master)](https://travis-ci.org/TimToebrock/Rpriori)
 
 
-# ProjectApriori
+# Rpriori
 
-The goal of ProjectApriori is to create association rules of type X=>Y by using the apriori algorithm.
+The goal of Rpriori is to create association rules of type X=>Y by using the Apriori algorithm.
 
 ## Installation
 
-You can install ProjectApriori from github with:
+You can install Rpriori from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("TimToebrock/Project_Apriori")
+devtools::install_github("TimToebrock/Rpriori")
 ```
 
 ## Example: Creating association rules
@@ -33,7 +33,7 @@ devtools::install_github("TimToebrock/Project_Apriori")
 This is a basic example which shows you how to create association rules with Rpriori using the "Groceries" dataset:
 
 ```{r example, message=FALSE, warning=FALSE}
-data("Groceries", package = "ProjectApriori")
+data("Groceries", package = "Rpriori")
 Rules <- AssociationRules(Groceries, minsupport = 0.01)
 show(Rules)
 ```
