readme changes Demo runs w/o giving any errors now

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,11 +17,11 @@ library(Rpriori)
 
 # Rpriori
 
-The goal of Rpriori is to create association rules of type X=>Y by using the Apriori algorithm.
+The goal of `Rpriori` is to create association rules of type X=>Y by using the Apriori algorithm. For a more detailed demonstration of how the package works please consider the Demo file in the examples folder. This `README` only covers the most important features.
 
 ## Installation
 
-You can install Rpriori from github with:
+You can install `Rpriori` from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
@@ -30,7 +30,7 @@ devtools::install_github("TimToebrock/Rpriori")
 
 ## Example: Creating association rules
 
-This is a basic example which shows you how to create association rules with Rpriori using the `Groceries` dataset:
+This is a basic example which shows you how to create association rules with `Rpriori` using the `Groceries` dataset:
 
 ```{r example, message=FALSE, warning=FALSE}
 data("Groceries")
