--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ library(Rpriori)
 
 # Rpriori
 
-The goal of `Rpriori` is to create association rules of type X=>Y by using the Apriori algorithm. For a more detailed demonstration of how the package works please consider the Demo file in the examples folder. This `README` only covers the most important features.
+The goal of `Rpriori` is to create association rules of type X=>Y by using the Apriori algorithm. For a more detailed demonstration of how the package works please consider the examples.R file in the examples folder. This `README` only covers the most important features.
 
 ## Installation
 
@@ -30,16 +30,45 @@ devtools::install_github("TimToebrock/Rpriori")
 
 ## Example: Creating association rules
 
-This is a basic example which shows you how to create association rules with `Rpriori` using the `Groceries` dataset:
+Let's say we would like to mine association rules based on the `Groceries` dataset with the 
+`Rpriori` package. Let's first get a rough overview over the dataset. To do so we could take a look
+the `summary()` function of Rpriori.
 
-```{r example, message=FALSE, warning=FALSE}
+```{r}
 data("Groceries")
-Rules <- AssociationRules(Groceries, minsupport = 0.01)
-show(Rules)
+summary(Groceries)
 ```
 
-To create rules you need to supply `AssociationRules()` with a transactions database and a minimum support threshold. 
-You can additionally set a minimum confidence threshold.
+Interesting! We have 9835 transactions recorded with a total of 169 items. With a density of 0.026
+the average basket does have 4 items in it. That seems realistic. Let's try to find some frequent
+items with the `FindFrequentItemsets()` function of `Rpriori`!
+
+```{r}
+Frequent <- FindFrequentItemsets(Groceries, minsupport = 0.1)
+show(Frequent)
+```
+
+We see that there are some really frequent items that occur in one out of ten transactions! What are
+these items? We can take a closer look at the items by using the `print()` function.
+
+```{r}
+print(Frequent)
+```
+Does not even seem that unhealthy! Can we already find association rules based on this support value?
+Lets try out the `AssociationRules()` function.
+
+```{r}
+AssociationRules(Groceries, 0.1)
+```
+
+Unfortunately not. Lets try another support value and set the minimal confidence to 0.2.
+
+```{r}
+Rules <- AssociationRules(Groceries, minsupport = 0.01, minconfidence = 0.2)
+show(Rules)
+```
+Wow! We found our first Association rules. In the next example we are going to look a little bit
+closer at them!
 
 ## Example: Inspecting data
 
