increased output width

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "figures/"
 )
+options(width = 100)
 library(Rpriori)
 ```
 [![Build Status](https://travis-ci.org/TimToebrock/Rpriori.svg?branch=master)](https://travis-ci.org/TimToebrock/Rpriori)
